# TaskTracker

./: .gitignore  CMakeLists.txt  README.md
include/: CommandHandler.hpp  JsonTaskStorage.hpp  PrintSystem.hpp  Task.hpp  TaskManager.hpp  TaskStorage.hpp  TasksData.hpp
include/Command/: CommandHandler.hpp
include/Exception/: Exceptions.hpp
include/Print/: PrintSystem.hpp
include/Storage/: JsonTaskStorage.hpp  TaskStorage.hpp  TasksData.hpp
include/Task/: Task.hpp  TaskManager.hpp
src/: CMakeLists.txt  CommandHandler.cpp  JsonTaskStorage.cpp  TaskManager.cpp  main.cpp
src/Command/: CommandHandler.cpp
src/Storage/: JsonTaskStorage.cpp
src/Task/: TaskManager.cpp
tests/: CMakeLists.txt  TaskManagerTests.cpp
